# smithy-cpp

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  REPO.bazel  maven_install.json
bazel/tests/: BUILD.bazel  defs_test.bzl  greeter.smithy  greeter_restjson1.smithy  greeter_roundtrip_test.cc  greeter_simplerestjson.smithy
benchmarks/: BUILD.bazel  beast_benchmark.cc  request_benchmark.cc  serde_benchmark.cc
codegen/: BUILD.bazel  build.gradle.kts  gradle.properties  settings.gradle.kts
codegen/compile-tests/: BUILD.bazel  gauntlet_compile_test.cc  streaming_compile_test.cc
codegen/compile-tests/model/: gauntlet.smithy  streaming.smithy
codegen/compile-tests/model/bindings/: jsonrpc2.smithy  rpcv2cbor.smithy  simplerestjson.smithy
codegen/smithy-cpp-codegen/: build.gradle.kts
examples/bazel-consumer/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  async_acceptance_test.cc  chat_async_reconnect_server_main.cc  chat_reconnect_cli_test.sh  chat_reconnect_client_main.cc  chat_reconnect_server_main.cc  eventstream_consumer_test.cc  jsonrpc_raw_peer_main.cc  jsonrpc_stream_cli_test.sh  jsonrpc_stream_client_main.cc  jsonrpc_stream_server_main.cc  model-evolution-check.sh  streaming_acceptance_test.cc  todo_beast_acceptance_test.cc  todo_integration_test.cc  websocket_acceptance_test.cc
examples/bazel-consumer/model/: chatstream.smithy  tallystream.smithy  todo.smithy
examples/bazel-consumer/model/bindings/: jsonrpc2.smithy  restjson1.smithy  rpcv2cbor.smithy  simplerestjson.smithy
examples/cafe/: BUILD.bazel  generated_client_test.cc  generated_types_test.cc
examples/cafe/model/: cafe.smithy
examples/chat/: BUILD.bazel  async_hub_cli_test.sh  async_hub_server_main.cc  chat_browser_e2e_test.cc  chat_e2e_beast_test.cc  chat_e2e_test.cc  hub_cli_test.sh  hub_client_main.cc  hub_e2e_test.cc  hub_handler.h  hub_server_main.cc  room_handler.h  stream_test_fixture.h
examples/chat/model/: chat.smithy
examples/jsonrpc/: BUILD.bazel  e2e_test.cc
examples/jsonrpc/model/: keyvalue.smithy
examples/jsonrpc2/: BUILD.bazel  accumulate_handler.h  interop_wire_test.cc  stream_e2e_beast_test.cc  stream_e2e_test.cc  stream_test_fixture.h
examples/jsonrpc2/model/: calculator.smithy
examples/roundtrip/rest/: BUILD.bazel  api_key_wire_test.cc  typed_errors_test.cc
examples/roundtrip/rpc/: BUILD.bazel  no_input_body_wire_test.cc
examples/simplerestjson/: BUILD.bazel  bookstore_server_lifecycle_test.sh  serve_main.cc
examples/simplerestjson/model/: bookstore.smithy
examples/weather/: BUILD.bazel  generated_client_e2e_test.cc  generated_server_e2e_test.cc  generated_types_test.cc
examples/weather/handwritten/: weather_client.cc  weather_client.h  weather_e2e_test.cc  weather_server.cc  weather_server.h  weather_types.cc  weather_types.h
examples/weather/model/: weather.smithy
fuzz/: BUILD.bazel  cbor_decode_fuzz.cc  eventstream_frame_fuzz.cc  eventstream_json_frame_fuzz.cc  eventstream_jsonrpc_frame_fuzz.cc  forwarded_fuzz.cc  fuzz_driver_main.cc  http1_fuzz.cc  json_decode_fuzz.cc  regex_fuzz.cc  server_dispatch_fuzz.cc  uri_fuzz.cc
protocol-tests/jsonrpc2/: BUILD.bazel  stream_conformance_test.cc
protocol-tests/jsonrpc2/model/: jsonrpc2.smithy
protocol-tests/rpcv2cbor/malformed/: BUILD.bazel  server_malformed_test.cc
protocol-tests/unions/: BUILD.bazel  union_accessor_test.cc  union_cbor_test.cc  union_gauntlet_cbor_test.cc  union_gauntlet_jsonrpc2_test.cc  union_jsonrpc2_test.cc
protocol-tests/unions/model/: unions.smithy
protocol-tests/unions/model/bindings/: jsonrpc2.smithy  rpcv2cbor.smithy
runtime/: BUILD.bazel
runtime/include/smithy/cbor/: cbor.h
runtime/include/smithy/client/: config.h  interceptor.h  observability.h  pagination.h  retry.h
runtime/include/smithy/compression/: gzip.h
runtime/include/smithy/core/: base64.h  blob.h  boxed.h  container_traits.h  document.h  document_serde.h  error.h  fatal.h  hash.h  outcome.h  overloaded.h  print.h  regex.h  text.h  timestamp.h  uuid.h  version.h
runtime/include/smithy/eventstream/: async_event_stream.h  envelope.h  event_stream.h  frame.h  json_frame.h  jsonrpc_frame.h  (+1 more)
runtime/src/cbor/: cbor.cc
runtime/src/client/: observability.cc  retry.cc
runtime/src/compression/: gzip.cc
runtime/src/core/: base64.cc  document_serde.cc  regex.cc  text.cc  timestamp.cc  uuid.cc  version.cc
runtime/src/eventstream/: envelope.cc  frame.cc  json_frame.cc  jsonrpc_frame.cc  jsonrpc_stream_socket.cc
runtime/src/http/: .clang-tidy  beast_src.cc  beast_transport.cc  forwarded.cc  headers.cc  http1.cc  server_dispatch.cc  socket_transport.cc  trace_context.cc  uri.cc  websocket_pair.cc
runtime/src/json/: json.cc
runtime/src/server/: middleware.cc  origin_gate.cc  router.cc  websocket_router.cc
runtime/tests/cbor/: cbor_hostile_test.cc  cbor_property_test.cc  cbor_test.cc
runtime/tests/client/: config_test.cc  observability_test.cc  pagination_test.cc  retry_test.cc
runtime/tests/compression/: gzip_test.cc
runtime/tests/core/: boxed_test.cc  core_test.cc  document_serde_test.cc  hash_test.cc  print_test.cc  regex_test.cc  timestamp_differential_test.cc  timestamp_test.cc  uuid_test.cc  version_test.cc
runtime/tests/eventstream/: async_event_stream_test.cc  envelope_test.cc  event_stream_test.cc  frame_test.cc  json_frame_test.cc  jsonrpc_frame_test.cc  jsonrpc_stream_socket_test.cc
runtime/tests/http/: beast_client_test.cc  beast_transport_test.cc  beast_websocket_test.cc  forwarded_test.cc  http1_hostile_test.cc  http_test.cc  server_dispatch_test.cc  socket_transport_hostile_test.cc  socket_transport_test.cc  trace_context_test.cc  uri_property_test.cc  websocket_pair_test.cc
runtime/tests/json/: json_conformance_test.cc  json_property_test.cc  json_test.cc
runtime/tests/server/: middleware_test.cc  origin_gate_test.cc  router_test.cc  session_registry_test.cc  websocket_router_test.cc
runtime/tests/testing/: protocol_test_support_test.cc  random_document.h
(+135 files in other folders)
