# The bzlmod module version stays 0.0.0 until the module is published to the
# Bazel Central Registry (deferred, PLAN Phase 6); consumers override the source
# with git_override/local_path_override, which ignores this value. The product
# version consumers actually observe is smithy::Version() / the client
# User-Agent ("0.1.0-dev"). See docs/versioning.md.
module(
    name = "smithy_cpp",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")

# TLS for the Beast transports (ADR-0007). The asio SSL implementation is
# compiled in runtime/src/http/beast_src.cc against BoringSSL directly, so
# consumers need no @boost.asio//:ssl flag.
bazel_dep(name = "boringssl", version = "0.20240913.0")
bazel_dep(name = "boost.beast", version = "1.87.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")

# boost.container 1.87's registry overlay calls native.cc_test without a
# load(), the one stale file in the boost 1.87 graph (audited); patch it
# rather than moving to boost 1.90, which drags in boringssl toolchains.
single_version_override(
    module_name = "boost.container",
    patch_strip = 1,
    patches = ["//third_party:boost_container_cc_test_load.patch"],
)

bazel_dep(name = "rules_testing", version = "0.6.0", dev_dependency = True)

# The code generator runs inside the build graph as a hermetic Java action
# (bazel/defs.bzl); rules_jvm_external pins its Smithy dependencies.
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "smithy_cpp_codegen_maven",
    artifacts = [
        # alloy#simpleRestJson — the vendor-neutral REST/JSON protocol trait.
        "com.disneystreaming.alloy:alloy-core:0.3.21",
        "software.amazon.smithy:smithy-build:1.58.0",
        "software.amazon.smithy:smithy-codegen-core:1.58.0",
        "software.amazon.smithy:smithy-protocol-test-traits:1.58.0",
        "software.amazon.smithy:smithy-protocol-traits:1.58.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "smithy_cpp_codegen_maven")
