# The bzlmod module version stays 0.0.0 until the module is published to the
# Bazel Central Registry (deferred, PLAN Phase 6); consumers override the source
# with git_override/local_path_override, which ignores this value. The product
# version consumers actually observe is smithy::Version() / the client
# User-Agent ("0.1.0-dev"). See docs/versioning.md.
module(
    name = "smithy_cpp",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")

# TLS for the Beast transports (ADR-0007). The asio SSL implementation is
# compiled in runtime/src/http/beast_src.cc against BoringSSL directly, so
# consumers need no @boost.asio//:ssl flag. boringssl tracks what boost.asio
# 1.90 requires — pinned explicitly so the security-sensitive dependency
# bumps deliberately, never as an MVS side effect.
bazel_dep(name = "boringssl", version = "0.20251002.0")
bazel_dep(name = "boost.beast", version = "1.90.0.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")

bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "rules_testing", version = "0.6.0", dev_dependency = True)

# Hermetic LLVM toolchain with libc++ — the linux clang+libc++ matrix cell
# (CI's --config=llvm job) and the setup serious Bazel consumers run
# (toolchains_llvm + parse_headers is exactly the environment that caught the
# boost.context std::result_of gap). Dev-only and unregistered by default:
# the CI job selects it with --extra_toolchains, so ordinary builds keep the
# autodetected toolchain. libc++ is toolchains_llvm's default stdlib.
# Pinned to 1.4.0 deliberately: 1.5+ grew an aspect_bazel_lib/tar.bzl
# dependency whose module-level toolchain registrations break analysis
# behind download-blocking proxies (same class as the openssl note in
# development.md) — 1.4.0's graph is already fully contained in ours.
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

# 1.4.0's generated toolchain BUILD calls cc_import without a load() — a
# Bazel 9 native-rule removal casualty, fixed upstream in 1.6.0's template.
# This applies that exact one-line fix to 1.4.0 (moving to 1.6.0 instead
# would take the aspect_bazel_lib graph this pin exists to avoid).
single_version_override(
    module_name = "toolchains_llvm",
    patch_strip = 1,
    patches = ["//third_party:toolchains_llvm_cc_import_load.patch"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")

# The code generator runs inside the build graph as a hermetic Java action
# (bazel/defs.bzl); rules_jvm_external pins its Smithy dependencies.
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "smithy_cpp_codegen_maven",
    artifacts = [
        # alloy#simpleRestJson — the vendor-neutral REST/JSON protocol trait.
        "com.disneystreaming.alloy:alloy-core:0.3.21",
        "software.amazon.smithy:smithy-build:1.58.0",
        "software.amazon.smithy:smithy-codegen-core:1.58.0",
        "software.amazon.smithy:smithy-protocol-test-traits:1.58.0",
        "software.amazon.smithy:smithy-protocol-traits:1.58.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "smithy_cpp_codegen_maven")
