load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

COPTS = select({
    "@platforms//os:windows": [],
    "//conditions:default": [
        "-Wall",
        "-Wextra",
    ],
})

cc_library(
    name = "core",
    srcs = [
        "src/core/base64.cc",
        "src/core/document_serde.cc",
        "src/core/text.cc",
        "src/core/timestamp.cc",
        "src/core/uuid.cc",
        "src/core/version.cc",
    ],
    hdrs = [
        "include/smithy/core/base64.h",
        "include/smithy/core/blob.h",
        "include/smithy/core/boxed.h",
        "include/smithy/core/document.h",
        "include/smithy/core/document_serde.h",
        "include/smithy/core/error.h",
        "include/smithy/core/outcome.h",
        "include/smithy/core/text.h",
        "include/smithy/core/timestamp.h",
        "include/smithy/core/uuid.h",
        "include/smithy/core/version.h",
    ],
    copts = COPTS,
    includes = ["include"],
)

cc_library(
    name = "json",
    srcs = ["src/json/json.cc"],
    hdrs = ["include/smithy/json/json.h"],
    copts = COPTS,
    includes = ["include"],
    deps = [
        ":core",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "cbor",
    srcs = ["src/cbor/cbor.cc"],
    hdrs = ["include/smithy/cbor/cbor.h"],
    copts = COPTS,
    includes = ["include"],
    deps = [":core"],
)

cc_library(
    name = "http",
    srcs = [
        "src/http/headers.cc",
        "src/http/socket_transport.cc",
        "src/http/trace_context.cc",
        "src/http/uri.cc",
    ],
    hdrs = [
        "include/smithy/http/headers.h",
        "include/smithy/http/loopback.h",
        "include/smithy/http/message.h",
        "include/smithy/http/socket_transport.h",
        "include/smithy/http/trace_context.h",
        "include/smithy/http/transport.h",
        "include/smithy/http/uri.h",
    ],
    copts = COPTS,
    includes = ["include"],
    linkopts = select({
        "@platforms//os:windows": ["ws2_32.lib"],
        "//conditions:default": [],
    }),
    deps = [":core"],
)

# Support library for the generated protocol conformance tests
# (protocol-tests/): capturing transport, query/body equivalence assertions.
cc_library(
    name = "protocol_test_support",
    testonly = True,
    hdrs = ["testing/include/smithy/testing/protocol_test.h"],
    includes = ["testing/include"],
    deps = [
        ":cbor",
        ":core",
        ":http",
        ":json",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "protocol_test_support_test",
    size = "small",
    srcs = ["tests/testing/protocol_test_support_test.cc"],
    copts = COPTS,
    deps = [
        ":protocol_test_support",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "trace_context_test",
    size = "small",
    srcs = ["tests/http/trace_context_test.cc"],
    copts = COPTS,
    deps = [
        ":http",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "http_test",
    size = "small",
    srcs = ["tests/http/http_test.cc"],
    copts = COPTS,
    deps = [
        ":http",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "socket_transport_test",
    size = "small",
    srcs = ["tests/http/socket_transport_test.cc"],
    copts = COPTS,
    tags = ["requires-network"],
    deps = [
        ":http",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "socket_transport_hostile_test",
    size = "small",
    srcs = ["tests/http/socket_transport_hostile_test.cc"],
    copts = COPTS,
    tags = ["requires-network"],
    deps = [
        ":http",
        "@googletest//:gtest_main",
    ],
)

# Production server transport (ADR-0006). Separate target so consumers that
# only need the client, loopback, or test transports don't pull in Boost.
cc_library(
    name = "http_beast",
    srcs = [
        "src/http/beast_src.cc",
        "src/http/beast_transport.cc",
    ],
    hdrs = ["include/smithy/http/beast_transport.h"],
    copts = COPTS,
    defines = select({
        "@platforms//os:windows": ["_WIN32_WINNT=0x0A00"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    # Static only: Bazel's dynamic test linking would put the asio/beast
    # implementation (beast_src.cc) in a .so whose vague-linkage typeinfo
    # duplicates the consumers' — ASan flags that as an ODR violation.
    linkstatic = True,
    deps = [
        ":core",
        ":http",
        "@boost.asio",
        "@boost.beast",
        "@boringssl//:ssl",
    ],
)

cc_test(
    name = "beast_transport_test",
    size = "small",
    srcs = ["tests/http/beast_transport_test.cc"],
    copts = COPTS,
    tags = ["requires-network"],
    deps = [
        ":http",
        ":http_beast",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "beast_client_test",
    size = "small",
    srcs = ["tests/http/beast_client_test.cc"],
    copts = COPTS,
    tags = ["requires-network"],
    deps = [
        ":core",
        ":http",
        ":http_beast",
        "@googletest//:gtest_main",
    ],
)

# Gzip codec for @requestCompression bodies; separate target so consumers
# without compressed operations don't pull in zlib.
cc_library(
    name = "compression",
    srcs = ["src/compression/gzip.cc"],
    hdrs = ["include/smithy/compression/gzip.h"],
    copts = COPTS,
    includes = ["include"],
    deps = [
        ":core",
        "@zlib",
    ],
)

cc_test(
    name = "gzip_test",
    size = "small",
    srcs = ["tests/compression/gzip_test.cc"],
    copts = COPTS,
    deps = [
        ":compression",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "client",
    srcs = [
        "src/client/observability.cc",
        "src/client/retry.cc",
    ],
    hdrs = [
        "include/smithy/client/config.h",
        "include/smithy/client/interceptor.h",
        "include/smithy/client/observability.h",
        "include/smithy/client/retry.h",
    ],
    copts = COPTS,
    includes = ["include"],
    deps = [
        ":core",
        ":http",
    ],
)

cc_test(
    name = "retry_test",
    size = "small",
    srcs = ["tests/client/retry_test.cc"],
    copts = COPTS,
    deps = [
        ":client",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "server",
    srcs = [
        "src/server/middleware.cc",
        "src/server/router.cc",
    ],
    hdrs = [
        "include/smithy/server/middleware.h",
        "include/smithy/server/router.h",
    ],
    copts = COPTS,
    includes = ["include"],
    deps = [
        ":core",
        ":http",
    ],
)

cc_test(
    name = "router_test",
    size = "small",
    srcs = ["tests/server/router_test.cc"],
    copts = COPTS,
    deps = [
        ":server",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "middleware_test",
    size = "small",
    srcs = ["tests/server/middleware_test.cc"],
    copts = COPTS,
    deps = [
        ":server",
        "@googletest//:gtest_main",
    ],
)

# Test-only helpers (random Document generator for property tests).
cc_library(
    name = "testing",
    testonly = True,
    hdrs = ["tests/testing/random_document.h"],
    copts = COPTS,
    includes = ["."],
    deps = [":core"],
)

cc_test(
    name = "cbor_property_test",
    size = "small",
    srcs = ["tests/cbor/cbor_property_test.cc"],
    copts = COPTS,
    deps = [
        ":cbor",
        ":testing",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "json_property_test",
    size = "small",
    srcs = ["tests/json/json_property_test.cc"],
    copts = COPTS,
    deps = [
        ":json",
        ":testing",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "uri_property_test",
    size = "small",
    srcs = ["tests/http/uri_property_test.cc"],
    copts = COPTS,
    deps = [
        ":http",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "json_test",
    size = "small",
    srcs = ["tests/json/json_test.cc"],
    copts = COPTS,
    deps = [
        ":json",
        "@googletest//:gtest_main",
    ],
)

# Bakes the vendored JSONTestSuite filenames into a source the conformance test
# links: runfiles directory enumeration isn't portable, so the parametrized
# case list comes from the checked-in files at build time.
genrule(
    name = "json_conformance_index",
    srcs = glob(["tests/json/jsontestsuite/test_parsing/*.json"]),
    outs = ["json_conformance_index.cc"],
    cmd = "\n".join([
        "{",
        "  echo '#include <string>'",
        "  echo '#include <vector>'",
        "  echo 'namespace smithy::json {'",
        "  echo 'std::vector<std::string> CorpusFiles() {'",
        "  echo '  return {'",
        "  for f in $(SRCS); do echo \"    \\\"$$(basename $$f)\\\",\"; done",
        "  echo '  };'",
        "  echo '}'",
        "  echo '}  // namespace smithy::json'",
        "} > $@",
    ]),
)

cc_test(
    name = "json_conformance_test",
    size = "small",
    srcs = [
        "tests/json/json_conformance_test.cc",
        ":json_conformance_index",
    ],
    copts = COPTS,
    data = glob(["tests/json/jsontestsuite/test_parsing/*.json"]),
    # The JSON parser is platform-independent; run the corpus on POSIX and skip
    # the runfiles/genrule-bash portability surface on Windows for no added
    # coverage.
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":json",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cbor_test",
    size = "small",
    srcs = ["tests/cbor/cbor_test.cc"],
    copts = COPTS,
    deps = [
        ":cbor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_test",
    size = "small",
    srcs = [
        "tests/core/boxed_test.cc",
        "tests/core/core_test.cc",
        "tests/core/document_serde_test.cc",
        "tests/core/timestamp_differential_test.cc",
        "tests/core/timestamp_test.cc",
        "tests/core/version_test.cc",
    ],
    copts = COPTS,
    deps = [
        ":core",
        "@googletest//:gtest_main",
    ],
)
